updated the readme

--- a/README
+++ b/README
@@ -1,5 +1,3 @@
 Alignr
 
-This is an additional note in the Readme to be pulled into the original repo from Ryan’s fork.
-
-I think I figured out pulling, forking and merging in a small way.
+To be built with CSS, Javascript and jQuery
